Reduced duplicate code